add callbacks for appsink

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 gst = { package = "gstreamer", version = "*" }
+gst_app = { package = "gstreamer-app", version = "*" }
 derive_more = "*"
 anyhow = "*"
